# social-dynamics-pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  socdyn_test_db.db
.devcontainer/: Dockerfile  devcontainer.json  pyproject.toml
alembic/: env.py
alembic/versions/: 49b8b12b7fa5_lookup_tables_must_have_label_and_desc.py  647c9e4f551b_army_number_must_be_string_not_int.py  a666e0cf3bc8_update_formb102r_with_fields_for_.py  d49540103e28_initial.py  e041369e8253_create_auditlog_table.py
pipeline/: __main__.py  logging_config.py
pipeline/database/: init_db.py  models.py  validators.py
pipeline/database/helpers/: audit_log.py  form_b102r.py  individual.py  matchers.py
pipeline/tasks/: db_import_b102r.py  db_import_utils.py  image_processing.py  pdf_processing.py
pipeline/tasks/utils/: db_import_utils.py
pipeline/ui/: app.py  config.py
pipeline/ui/dev/: app.py
pipeline/ui/dev/views/: browse_database.py  extract_images.py  layout.py
pipeline/ui/muster/: app.py
pipeline/ui/muster/views/: correct.py  css.py  home.py  layout.py
pipeline/ui/views/: blank_detection.py  browse_database.py  browse_images.py  form_classification.py  layout.py
tests/: conftest.py
tests/data/: generate_sample_data_b102r.py  generate_test_pdfs.py
tests/data/public/json/: APV010_page2_img1_b102r.jpg_596691.qas.json  APV01_page8_img1_b102r.jpg_644894.qas.json  APV02_page3_img1_b102r.jpg_166531.qas.json  (+7 more)
tests/pipeline/tasks/: test_db_import_b102r.py  test_db_import_utils.py  test_extract_images.py  test_image_processing.py
(+3 files in other folders)
