[project]
name = "social-dynamics-pipeline"
version = "0.1.0"
description = "Pipeline for processing Social Dynamics data"
requires-python = ">=3.12"
dependencies = [
    "pikepdf>=9.7.0",
    "pillow>=11.1.0",
    "prefect>=3.3.4",
    "typer>=0.15.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff",
    "black",
    "mypy",
    "pre-commit",
    "reportlab"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["E", "F", "B", "I"]
exclude = ["tests/fixtures"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
