[project]
name = "social-dynamics-pipeline"
version = "0.1.0"
description = "Pipeline for processing Social Dynamics data"
requires-python = ">=3.10"
dependencies = [
    "nicegui>=2.14.1",
    "pikepdf>=9.7.0",
    "pillow>=11.2.1",
    "prefect>=3.3.4",
    "pydantic-settings>=2.8.1",
    "typer>=0.15.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy",
    "pre-commit",
    "reportlab"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = ["E", "F", "B", "I"]
exclude = ["tests/fixtures"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
